--- a/public/index.html
+++ b/public/index.html
@@ -9,22 +9,31 @@
     <link rel="preload" href="../src/data/RobotoCondensed-Bold.woff2" as="font">
     <link rel="preload" href="../src/data/RobotoCondensed-Regular.woff2" as="font">
     <title>BZ-Spiel Grand Prix von Bern</title>
-
+    <!-- Open Graph Metadata for Facebook -->
+<meta property="og:title" content="Würfeln Sie sich zum GP-Sieg">
+<meta property="og:description" content="Damit Sie den Grand Prix von Bern trotz Coronavirus gewinnen können, haben wir ein Würfelspiel 
+entworfen, mit all den Stolpersteinen, Freuden und Frustrationen, die man als Läuferin oder Läufer so erlebt.">
+<meta property="og:image" content="https://interaktiv.bernerzeitung.ch/2020/gp-bern/teaser.jpg">
+<meta property="og:url" content="https://interaktiv.bernerzeitung.ch/2020/gp-bern/">
+<meta property="og:locale" content="de_CH">
+<meta property="og:site_name" content="bernerzeitung.ch">
+<meta property="og:type" content="article">
+<!-- /Open Graph Metadata -->
     <script type="application/ld+json">
 
       {
         "@context": "http://schema.org",
         "@type": "NewsArticle",
-        "url": "https://interaktiv.bernerzeitung.ch/2020/gpbern/",
+        "url": "https://interaktiv.bernerzeitung.ch/2020/gp-bern/",
         "mainEntityOfPage": {
           "@type": "WebPage",
-          "@id": "https://interaktiv.bernerzeitung.ch/2020/gpbern/"
+          "@id": "https://interaktiv.bernerzeitung.ch/2020/gp-bern/"
         },
         "headline": "Würfeln Sie sich um GP-Sieg",
-        "thumbnailUrl": "https://interaktiv.bernerzeitung.ch/2020/gpbern/teaser.jpg",
+        "thumbnailUrl": "https://interaktiv.bernerzeitung.ch/2020/gp-bern/teaser.jpg",
         "image": {
           "@type": "ImageObject",
-          "url": "https://interaktiv.bernerzeitung.ch/2020/gpbern/teaser.jpg"
+          "url": "https://interaktiv.bernerzeitung.ch/2020/gp-bern/teaser.jpg"
         },
         "author": ["Jürg Steiner","Daniel Barben"],
         "creator": ["Daniel Barben"],
