--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="viewport" content="height=device-height">
     <meta name="theme-color" content="#000000" />
+    <meta name="author" content="Daniel Barben, Jürg Steiner">
     <link rel="preload" href="../src/data/RobotoCondensed-Bold.woff2" as="font">
     <link rel="preload" href="../src/data/RobotoCondensed-Regular.woff2" as="font">
     <title>BZ-Spiel Grand Prix von Bern</title>
